# diabetic_retinopathy_detection

./: LICENSE  Makefile  README.md  __init__.py  dataset.py  features.py  plots.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
modeling/: predict.py  train.py
