[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diabetic_retinopathy_detection"
version = "0.0.1"
description = "Project to detect diabetic retinopathy using fundus image dataset (APTOS 2019)"
authors = [
  { name = "Chaitanya Peshin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["diabetic_retinopathy_detection"]
include = ["pyproject.toml", "diabetic_retinopathy_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diabetic_retinopathy_detection"]
force-sort-within-sections = true

